# -pidgin-otr

./: .gitignore  INSTALL  INSTALL.mingw  Makefile.am  Makefile.mingw  autogen.sh  common.c  common.h  configure.ac  dialogs.c  dialogs.h  fprint-verificator.h  gtk-dialog.c  gtk-dialog.h  gtk-ui.c  gtk-ui.h  makedist  otr-icons.h  otr-plugin.c  otr-plugin.h  purple3-dialog.c  purple3-dialog.h  purple3-ui.c  purple3-ui.h  tooltipmenu.c  tooltipmenu.h  ui.c  ui.h
po/: POTFILES.in
